src/attempt_01/test_output.txt
E
======================================================================
ERROR: test (unittest.loader._FailedTest.test)
----------------------------------------------------------------------
ImportError: Failed to import test module: test
Traceback (most recent call last):
  File "/home/bcheng/workspace/tools/anaconda3/envs/langchain/lib/python3.12/unittest/loader.py", line 394, in _find_test_path
    module = self._get_module_from_name(name)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/bcheng/workspace/tools/anaconda3/envs/langchain/lib/python3.12/unittest/loader.py", line 337, in _get_module_from_name
    __import__(name)
  File "/home/bcheng/workspace/dev/langchain/proj2/test/test.py", line 3, in <module>
    from solution import evaluate
  File "/home/bcheng/workspace/dev/langchain/proj2/src/attempt_01/solution.py", line 91
    while (ops and
          ^
SyntaxError: '(' was never closed


----------------------------------------------------------------------
Ran 1 test in 0.000s

FAILED (errors=1)
